# fernando-gear-academy

Tamagotchi/: Cargo.toml  build.rs
Tamagotchi/io/: Cargo.toml
Tamagotchi/io/src/: lib.rs
Tamagotchi/src/: lib.rs
Tamagotchi/tests/: tamagotchi_test.rs
escrow/: Cargo.toml  build.rs
escrow/io/: Cargo.toml
escrow/io/src/: lib.rs
escrow/src/: lib.rs
hello-world/: Cargo.toml  build.rs
hello-world/hello_world_io/: Cargo.toml
hello-world/hello_world_io/src/: main.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_world_tests.rs
