[package]
name = "tamagotchi-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"],  rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}
gmeta = { git = "https://github.com/gear-tech/gear.git",  rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}
scale-info = { version = "2", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3", default-features = false }
